[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.8.0",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.4",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
]
